# weather2png-server

./: CMakeLists.txt  Dockerfile  README.md  go.mod  go.sum  main.cpp  pngWriter.go  pngWriter_test.go  weatherFetcher.go  weatherFetcher_test.go
cmd/: server.go
cmd/web/: index.html
resources/: kindle-install.sh
